Fixed spacing issues in filter menu and deleted input labels

--- a/src/sass/_filter.scss
+++ b/src/sass/_filter.scss
@@ -1,7 +1,7 @@
 .filter-btn {
     background-color: #16c6b6;
     color: white;
-    padding: 16px;
+    padding: 8px;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -20,22 +20,15 @@
     background-color: #f9f9f9;
     min-width: 300px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    font-size: 10px;
+    font-size: 15px;
 
-    a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
+    div {
+        margin: 3px 3px 10px 5px;
     }
 
     input {
         width: 100px;
     }
-}
-
-.filter-content a:hover {
-    background-color: #f1f1f1;
 }
 
 .filter-dropdown:hover .filter-content {
@@ -50,4 +43,14 @@
     display: inline;
     position: absolute;
     right: 0;
+}
+
+.filter-submit {
+    padding-top: 20px;
+}
+
+.parking {
+    input {
+        width: 50px;
+    }
 }
